# AS2FM

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  README.md  codespell_ignores.txt  docker-compose.yml  examples  graphics  pyproject.toml  test.puml
as2fm_common/: pyproject.toml
as2fm_common/src/as2fm_common/: common.py  ecmascript_interpretation.py
as2fm_common/test/: test_unittest_ecmascript_interpretation.py  test_utilities_smc_storm.py
jani_generator/: pyproject.toml
jani_generator/src/jani_generator/: __init__.py  main.py
jani_generator/src/jani_generator/convince_jani_helpers/: __init__.py  convince_to_plain_jani.py
jani_generator/src/jani_generator/jani_entries/: __init__.py  jani_assignment.py  jani_automaton.py  jani_composition.py  jani_constant.py  jani_convince_expression_expansion.py  jani_edge.py  jani_expression.py  jani_expression_generator.py  jani_guard.py  jani_model.py  jani_property.py  jani_utils.py  jani_value.py  jani_variable.py
jani_generator/src/jani_generator/ros_helpers/: ros_action_handler.py  ros_communication_handler.py  ros_service_handler.py  ros_services.py  ros_timer.py
jani_generator/src/jani_generator/scxml_helpers/: scxml_data.py  scxml_event.py  scxml_event_processor.py  scxml_expression.py  scxml_tags.py  scxml_to_jani.py  top_level_interpreter.py
jani_generator/test/: test_systemtest_convince_to_plain_jani.py  test_systemtest_scxml_to_jani.py  test_unittest_jani_model_loading.py  test_unittest_ros_timer.py  test_unittest_scxml_data.py  test_utilities_smc_storm.py  test_utilities_smc_strom.py
jani_generator/test/_test_data/: .gitignore
jani_generator/test/_test_data/array_model/: properties.jani  sender.scxml
jani_generator/test/_test_data/array_model_additional/: array_ops.scxml  main.xml  properties.jani
jani_generator/test/_test_data/array_model_basic/: main.xml  properties.jani  receiver.scxml
jani_generator/test/_test_data/battery_example/: battery_drainer.scxml  battery_manager.scxml  output.jani  output_GROUND_TRUTH.jani
jani_generator/test/_test_data/convince_jani/: first-model-mc-version.jani  first-model-simple.jani
jani_generator/test/_test_data/delibws24_p1/: bt_navigate_action.scxml  bt_original.xml  bt_pick_action.scxml  bt_place_action.scxml  properties.jani  world.scxml
jani_generator/test/_test_data/events_sync_examples/: .gitignore  properties.jani  receiver.scxml  sender.scxml  todo
jani_generator/test/_test_data/fibonacci_action_example/: .gitignore  client_1.scxml  client_2.scxml  main.xml  properties.jani  server.scxml
jani_generator/test/_test_data/fibonacci_action_single_thread/: client_1.scxml  main.xml  properties.jani  server.scxml
jani_generator/test/_test_data/multiple_senders_same_event/: main.xml  properties.jani  receiver.scxml  sender_a.scxml  sender_b.scxml
jani_generator/test/_test_data/plain_jani_examples/: array_problem.jani  example_arrays.jani
jani_generator/test/_test_data/robot_navigation_tutorial/: main.xml  properties.jani  robot_control.scxml  robot_platform.scxml
jani_generator/test/_test_data/robot_navigation_with_bt/: bt.xml  bt_drive_robot.scxml  bt_goal_check.scxml  main.xml  properties.jani  robot_platform.scxml
jani_generator/test/_test_data/ros_add_int_srv_example/: .gitignore  client_1.scxml  client_2.scxml  happy_clients.jani  server.scxml
jani_generator/test/_test_data/ros_example/: .gitignore  battery_depleted.jani  battery_depleted_failing.jani  battery_drainer.scxml  battery_manager.scxml  battery_properties.jani  jani_model_GROUND_TRUTH.jani  main-prepared.jani  main.xml  main_failing_prop.xml
jani_generator/test/_test_data/ros_example_w_bt/: .gitignore  battery_depleted.jani  battery_drainer.scxml  battery_manager.scxml  battery_properties.jani  bt.xml  bt_topic_condition.scxml  main.xml  main_failing_prop.xml
jani_generator/test/_test_data/ros_fibonacci_action_example/: client_1.scxml  client_2.scxml  example_arrays.jani  happy_clients.jani  main.xml  server.scxml  server_execute.scxml
ros_support_interfaces/as2fm_test_ros_interfaces/: CMakeLists.txt  package.xml
ros_support_interfaces/delib_ws_24_interfaces/: CMakeLists.txt  package.xml
ros_support_interfaces/delib_ws_24_interfaces/action/: Pick.action
ros_support_interfaces/dummy_pkg_for_declarations/: CMakeLists.txt  package.xml
ros_support_interfaces/uc3_interfaces/uc3_interfaces/: CMakeLists.txt  package.xml
scxml_converter/: pyproject.toml
scxml_converter/src/scxml_converter/: bt_converter.py  scxml_converter.py
scxml_converter/src/scxml_converter/scxml_entries/: __init__.py  bt_utils.py  ros_utils.py  scxml_assign.py  scxml_base.py  scxml_bt.py  scxml_data.py  scxml_data_model.py  scxml_executable_entries.py  scxml_if.py  scxml_param.py  scxml_root.py  scxml_ros_action_client.py  scxml_ros_action_server.py  scxml_ros_action_server_thread.py  scxml_ros_base.py  scxml_ros_entries.py  scxml_ros_field.py  scxml_ros_service.py  scxml_ros_timer.py  scxml_ros_topic.py  scxml_send.py  scxml_state.py  scxml_transition.py  utils.py  xml_utils.py
scxml_converter/src/scxml_entries/: scxml_state.py  scxml_transition.py
scxml_converter/test/: test_systemtest_scxml_entries.py  test_systemtest_xml.py  test_unittest_scxml_data.py  test_unittest_scxml_to_plain_expression.py  test_unittest_scxml_utils.py  test_utils.py
scxml_converter/test/_test_data/add_int_srv_example/: addition_client.scxml  addition_server.scxml
scxml_converter/test/_test_data/battery_drainer_charge/: battery_drainer.scxml  battery_manager.scxml  bt.xml  bt_topic_action.scxml  bt_topic_condition.scxml
scxml_converter/test/_test_data/battery_drainer_w_bt/: battery_drainer.scxml  bt.xml  bt_topic_action.scxml  (+1 more)
scxml_converter/test/output/: 10000_TopicCondition.scxml  1001_TopicAction.scxml  bt.scxml
visualizers/jani_visualizer/: pyproject.toml
visualizers/jani_visualizer/test/: jani_visualizer_test.py
visualizers/trace_visualizer/: pyproject.toml
visualizers/trace_visualizer/test/: trace_visualizer_test.py  visualizer_test.py
(+980 files in other folders)
