[build-system]
requires = ["setuptools>=61.0.0", "wheel", "pip>=24.2"]
build-backend = "setuptools.build_meta"

[project]
name = "as2fm"
version = "0.0.1"
description = ""
readme = "README.md"
authors = [
    {name = "Christian Henkel", email = "christian.henkel2@de.bosch.com"},
    {name = "Marco Lampacrescia", email = "marco.lampacrescia@de.bosch.com"}
]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.12",
]
keywords = []
dependencies = [
    # as2fm_common
    "js2py",
    "lxml",
    # jani_generator
    "jsonschema",
    "esprima",
    "escodegen",
    # jani_visualizer
    "webcolors",
    "plantuml",
    # scxml_converter
    # trace_visualizer
    "pandas",
    "Pillow",
]
requires-python = ">=3.10"

# Comment these lines out, since they prevent the package from being found in code
# [tool.setuptools.packages.find]
# where = ["src"]
# include = ["as2fm", "as2fm.*"]
#
# [tool.setuptools.package-dir]
# "as2fm" = "src/as2fm"

[tool.setuptools.package-data]
"as2fm.trace_visualizer" = ["data/slkscr.ttf"]
"as2fm.resources" = ["bt_control_nodes/*.scxml"]

[project.scripts]
as2fm_convince_to_plain_jani = "as2fm.jani_generator.main:main_convince_to_plain_jani"
as2fm_scxml_to_jani = "as2fm.jani_generator.main:main_scxml_to_jani"
as2fm_jani_to_plantuml = "as2fm.jani_visualizer.main:main_jani_to_plantuml"
as2fm_trace_to_png = "as2fm.trace_visualizer.main:main_trace_to_png"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pycodestyle",
    "flake8",
    "mypy",
    "isort",
    "bumpver"
]

[tool.pylint.main]
disable = [
    "C0114",  # Missing module docstring
    "E0401",  # Unable to import
    "R0401",  # Cyclic import
    "W0511",  # TODO comments (we need them)
]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[tool.codespell]
ignore-words-list = 'assertIn'
