[build-system]
requires = ["setuptools>=61.0.0", "wheel", "pip>=24.2"]
build-backend = "setuptools.build_meta"

[project]
name = "moco"
version = "0.0.1"
description = ""
readme = "README.md"
authors = [
    {name = "Christian Henkel", email = "christian.henkel2@de.bosch.com"},
    {name = "Marco Lampacrescia", email = "marco.lampacrescia@de.bosch.com"}
]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.12",
]
keywords = []
# TODO: Check dependencies to remove
dependencies = [
    # moco_common
    "lxml",
    # roaml_generator
    "jsonschema",
    "esprima",
    "escodegen",
    # roaml_converter
    "typing-extensions>=4.12.2",
]
requires-python = ">=3.10"

# Comment these lines out, since they prevent the package from being found in code
# [tool.setuptools.packages.find]
# where = ["src"]
# include = ["moco", "moco.*"]
#
# [tool.setuptools.package-dir]
# "moco" = "src/moco"

[tool.setuptools.package-data]
"moco.resources" = ["bt_control_nodes/*.scxml"]

[project.scripts]
moco_roaml_to_scxml = "moco.roaml_generator.main:main_roaml_to_scxml" # TODO: rename this function

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pycodestyle",
    "flake8",
    "mypy",
    "isort",
    "bumpver",
    "sybil"
]

[tool.pylint.main]
disable = [
    "C0114",  # Missing module docstring
    "E0401",  # Unable to import
    "R0401",  # Cyclic import
    "W0511",  # TODO comments (we need them)
]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[tool.codespell]
ignore-words-list = 'assertIn'
