[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jani_generator"
version = "0.0.1"
description = ""
readme = "README.md"
authors = [
    {name = "Christian Henkel", email = "christian.henkel2@de.bosch.com"},
    {name = "Marco Lampacrescia", email = "marco.lampacrescia@de.bosch.com"}
]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3.10",
]
keywords = []
dependencies = [
    "jsonschema",
    "js2py",
    "esprima"
]
requires-python = ">=3.7"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "pycodestyle", "flake8", "mypy", "isort", "bumpver"]

[project.scripts]
convince_to_plain_jani = "jani_generator.main:main"
scxml_to_jani = "jani_generator.scxml_helpers.scxml_to_jani:main"

[isort]
profile = "google"