[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jani_generator"
version = "0.0.1"
description = ""
readme = "README.md"
authors = [
    {name = "Christian Henkel", email = "christian.henkel2@de.bosch.com"},
    {name = "Marco Lampacrescia", email = "marco.lampacrescia@de.bosch.com"}
]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3.10",
]
keywords = []
dependencies = [
    "jsonschema",
    "js2py",
    "esprima",
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "pycodestyle", "flake8", "mypy", "isort", "bumpver"]

[project.scripts]
convince_to_plain_jani = "jani_generator.main:main_convince_to_plain_jani"
scxml_to_jani = "jani_generator.main:main_scxml_to_jani"

[isort]
profile = "google"
line_length = 100

[flake8]
max_line_length = 100