[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scxml_converter"
version = "0.0.1"
description = ""
readme = "README.md"
authors = [
    {name = "Christian Henkel", email = "christian.henkel2@de.bosch.com"},
    {name = "Marco Lampacrescia", email = "marco.lampacrescia@de.bosch.com"}
]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3.10",
]
keywords = []
dependencies = [
    "networkx",
    "btlib",
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "pycodestyle", "flake8", "mypy", "isort", "bumpver"]

[isort]
profile = "google"

[flake8]
max_line_length = 100