[build-system]
requires = ["setuptools>=61.0.0", "wheel", "pip>=24.2"]
build-backend = "setuptools.build_meta"

[project]
name = "jani_visualizer"
version = "0.0.1"
description = ""
readme = "README.md"
authors = [
    {name = "Christian Henkel", email = "christian.henkel2@de.bosch.com"},
    {name = "Marco Lampacrescia", email = "marco.lampacrescia@de.bosch.com"}
]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.12",
]
keywords = []
dependencies = [
    "webcolors",
    "plantuml",
]

requires-python = ">=3.7"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "pycodestyle", "flake8", "mypy", "isort", "bumpver"]

[project.scripts]
to_plantuml = "jani_visualizer.main:main_to_plantuml"

[isort]
profile = "google"